lang/test/testdata/errors/unknown_type.scampi
module main

struct Bad {
  x: NonExistentType
}
